--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry excluding="rover/camera/Main_GUI.java" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="roverServer/libs/camera"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="libs/camera/lwjgl.jar"/>
+	<classpathentry kind="lib" path="libs/camera/phys2d.jar"/>
+	<classpathentry kind="lib" path="libs/camera/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
