--- a/.classpath
+++ b/.classpath
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="rover/camera/Main_GUI.java" kind="src" path="src"/>
+	<classpathentry excluding="rover/camera/Main_GUI.java|rover/server/UpdateServer.java|rover/server/PIDServer.java" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="roverServer/libs/camera"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libs/camera/lwjgl.jar"/>
-	<classpathentry kind="lib" path="libs/camera/phys2d.jar"/>
-	<classpathentry kind="lib" path="libs/camera/slick.jar"/>
+	<classpathentry kind="lib" path="libs/websocket/javax.websocket-api-1.0.jar"/>
+	<classpathentry kind="lib" path="libs/websocket/tyrus-standalone-client-1.5.jar" sourcepath="C:/Users/Calvin/.m2/repository/org/glassfish/tyrus/bundles/tyrus-standalone-client/1.5/tyrus-standalone-client-1.5-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
